--- a/Gráfico com duas variáveis.ipynb
+++ b/Gráfico com duas variáveis.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Luiz Neto\n",
+    "Instituto de Ciências Atmosféricas - UFAL\n",
+    "luizsneto211@gmail.com\n",
+    "luiz.neto@icat.ufal.br\n",
+    "Last updated on September 03, 2025\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
